# SelfBlancingCar

./: Kconfig  LICENSE  Makefile  README.md  STC8H8K64U_control.code-workspace  config.h  hello.code-workspace  sdcc_rules.mk
lib/: sdcc_rules.mk
lib/cc2530_hal/: Kconfig  README.md  cc2530_hal.mk
lib/cc2530_hal/include/: hal_bitdef.h  hal_clock.h  hal_defs.h  hal_dma.h  hal_int.h  hal_mcu.h  hal_rf.h  hal_uart.h
lib/cc2530_hal/src/: hal_clock.c  hal_dma.c  hal_mcu.c  hal_rf.c  hal_uart.c
lib/common/: Kconfig  common.mk
lib/common/include/: protocol.h
lib/common/src/: crc.c
src/CC2530F256/: Makefile  README.md
src/CC2530F256/include/: CC2530_LCD.h  buzzer.h  cc2530_lcd.h  dma.h  gpio.h  rf.h  spi.h  sys_config.h  uart.h  wireless.h
src/CC2530F256/src/: CC2530_LCD.c  buzzer.c  cc2530_LCD.c  dma.c  main.c  main_pc.c  rf.c  spi.c  sys_config.c  uart.c  wireless.c
src/CC2530F256_PC/: Makefile  README.md
src/CC2530F256_PC/include/: rf.h  sys_config.h  uart.h
src/CC2530F256_PC/src/: main.c  rf.c  sys_config.c  uart.c
src/COMMON/include/: crc.h
src/STC8H8K64U/: Makefile
src/STC8H8K64U/include/: ADXL345.h  i2c.h  imu.h  pwm.h  spi.h  stc8h_bitdef.h  sys_config.h  uart.h
src/STC8H8K64U/src/: ADXL345.c  BMP180.c  i2c.c  imu.c  main.c  sys_config.c  uart.c
targets/ROS2_WS/: README.md
targets/ROS2_WS/src/self_blance_car/: CMakeLists.txt
targets/ROS2_WS/src/self_blance_car/include/self_blance_car/: interface.hpp  self_blance_car_node.hpp  serial.hpp  thread_utils.hpp
targets/ROS2_WS/src/self_blance_car/src/: self_blance_car_node.cpp  self_blance_car_node_main.cpp  serial.cpp
targets/STC8H8K64U/: Kconfig  Makefile
targets/STC8H8K64U/include/: sys_config.h
targets/STC8H8K64U/src/: i2c.c  main.c  uart.c
targets/cc2530_local/: .config  Kconfig  Makefile
targets/cc2530_remote/: .config  Kconfig  Makefile  config.h
targets/stc8h8k64u/: .config  Makefile
tools/: kconfig.py
(+27 files in other folders)
